--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -13,7 +13,7 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a class="navbar-brand" href="{{pathFor 'welcome'}}">Voice/Mobile/Web JBS 2015</a>
+		      <a class="navbar-brand" href="{{pathFor 'welcome'}}">Jason's Voice/Mobile/Web JBS 2015</a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
