--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -14,7 +14,8 @@
 		        <span class="icon-bar"></span>
 		      </button>
 		      <a class="navbar-brand" href="{{pathFor 'welcome'}}">
-	      	Jessica's Voice/Mobile/Web JBS 2015</a>
+	      		Jessica's Voice/Mobile/Web JBS 2015
+	      	  </a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
