--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -24,6 +24,7 @@
 					<li><a href="{{pathFor 'about'}}">About Us</a></li>
 					<li><a href="{{pathFor 'sponsors'}}">Sponsors</a></li>
 					<li><a href="{{pathFor 'iptable'}}">Local Servers</a></li>
+					<li><a href="{{pathFor 'chats'}}">Chats</a></li>
 				</ul>
 			    <ul class="nav navbar-nav navbar-right">
 			            {{> loginButtons}} <!-- here -->
