--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -14,7 +14,7 @@
 		        <span class="icon-bar"></span>
 		      </button>
 		      <a class="navbar-brand" href="{{pathFor 'welcome'}}">
-		      	Tim's Voice/Mobile/Web JBS 2015</a>
+		      	Jason's Voice/Mobile/Web JBS 2015</a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -24,6 +24,7 @@
 					<li><a href="{{pathFor 'about'}}">About Us</a></li>
 					<li><a href="{{pathFor 'sponsors'}}">Sponsors</a></li>
 					<li><a href="{{pathFor 'iptable'}}">Local Servers</a></li>
+					<li><a href="{{pathFor 'chat'}}">Chat</a></li>
 				</ul>
 			    <ul class="nav navbar-nav navbar-right">
 			            {{> loginButtons}} <!-- here -->
