--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -20,6 +20,7 @@
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      	<ul class="nav navbar-nav">
+		      		<li><a href="{{pathFor 'welcome'}}">Welcome</a></li>
 					<li><a href="{{pathFor 'people'}}">People</a></li>
 					<li><a href="{{pathFor 'about'}}">About Us</a></li>
 					<li><a href="{{pathFor 'sponsors'}}">Sponsors</a></li>
