--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -14,7 +14,7 @@
 		        <span class="icon-bar"></span>
 		      </button>
 		      <a class="navbar-brand" href="{{pathFor 'welcome'}}">
-	      		Jessica's Voice/Mobile/Web JBS 2015
+	      		Bookrack
 	      	  </a>
 		    </div>
 
