--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -14,13 +14,16 @@
 		        <span class="icon-bar"></span>
 		      </button>
 		      <a class="navbar-brand" href="{{pathFor 'welcome'}}">
-		      	Tim's Voice/Mobile/Web JBS 2015</a>
+		      	Limin's JBS App 2015</a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      	<ul class="nav navbar-nav">
-					<li><a href="{{pathFor 'people'}}">People</a></li>
+					<li><a href="{{pathFor 'chat'}}">Chat</a></li>
+					<li><a href="{{pathFor 'display'}}">Results</a></li>
+					<li><a href="{{pathFor 'learn'}}">Learn Japanese</a></li>
+					<li><a href="{{pathFor 'people'}}">Profiles</a></li>
 					<li><a href="{{pathFor 'about'}}">About Us</a></li>
 					<li><a href="{{pathFor 'sponsors'}}">Sponsors</a></li>
 					<li><a href="{{pathFor 'iptable'}}">Local Servers</a></li>
