some layout tweaking

--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -26,7 +26,7 @@
 					{{#if currentUser}}
 					<li><a href="{{pathFor 'people'}}">Users</a></li>
 					<li><a href="{{pathFor 'mybooks'}}">My Books</a></li>
-					<li><a href="{{pathFor 'me'}}">My Profile</a></li>
+					<li><a href="{{pathFor 'profile'}}">My Profile</a></li>
 					{{else}}
 					<li><p class="navbar-text">Please log in for more</p></li>
 					{{/if}}
