--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -20,13 +20,11 @@
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      	<ul class="nav navbar-nav">
+					<li><a href="{{pathFor 'rate'}}">Ratings</a></li>
 					<li><a href="{{pathFor 'chat'}}">Chat</a></li>
 					<li><a href="{{pathFor 'display'}}">Results</a></li>
 					<li><a href="{{pathFor 'learn'}}">Learn Japanese</a></li>
 					<li><a href="{{pathFor 'people'}}">Profiles</a></li>
-					<li><a href="{{pathFor 'about'}}">About Us</a></li>
-					<li><a href="{{pathFor 'sponsors'}}">Sponsors</a></li>
-					<li><a href="{{pathFor 'iptable'}}">Local Servers</a></li>
 				</ul>
 			    <ul class="nav navbar-nav navbar-right">
 			            {{> loginButtons}} <!-- here -->
