--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -21,7 +21,7 @@
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      	<ul class="nav navbar-nav">
-					<li><a href="{{pathFor 'about'}}">About Us</a></li>
+					<li><a href="{{pathFor 'about'}}">About</a></li>
 					<li><a href="{{pathFor 'allbooks'}}">All Books</a></li>
 					{{#if currentUser}}
 					<li><a href="{{pathFor 'people'}}">Users</a></li>
