--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -24,9 +24,9 @@
 					<li><a href="{{pathFor 'about'}}">About</a></li>
 					<li><a href="{{pathFor 'allbooks'}}">All Books</a></li>
 					{{#if currentUser}}
-					<li><a href="{{pathFor 'people'}}">Users</a></li>
 					<li><a href="{{pathFor 'mybooks'}}">My Books</a></li>
-					<li><a href="{{pathFor 'profile'}}">My Profile</a></li>
+					<!--<li><a href="{{pathFor 'people'}}">Users</a></li>-->
+					<li><a href="/profile/{{userid}}">My Profile</a></li>
 					{{else}}
 					<li><p class="navbar-text">Please log in for more</p></li>
 					{{/if}}
