--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -14,7 +14,9 @@
 		        <span class="icon-bar"></span>
 		      </button>
 		      <a class="navbar-brand" href="{{pathFor 'welcome'}}">
-		      	Tim's Voice/Mobile/Web JBS 2015</a>
+		      	<h2>Chi's</h2> </a>
+                <div id="logo"><a href="http://www.dota2.com"><img src="http://media.steampowered.com/apps/dota2/international_2011/dota_logo.png" width="482" height="100" border="0" /></a></div>
+
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -24,6 +26,7 @@
 					<li><a href="{{pathFor 'about'}}">About Us</a></li>
 					<li><a href="{{pathFor 'sponsors'}}">Sponsors</a></li>
 					<li><a href="{{pathFor 'iptable'}}">Local Servers</a></li>
+                    <li><a href="{{pathFor 'Chat'}}">Chatroom</a></li>
 				</ul>
 			    <ul class="nav navbar-nav navbar-right">
 			            {{> loginButtons}} <!-- here -->
