--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -14,16 +14,15 @@
 		        <span class="icon-bar"></span>
 		      </button>
 		      <a class="navbar-brand" href="{{pathFor 'welcome'}}">
-		      	Tim's Voice/Mobile/Web JBS 2015</a>
+		      	jamDB - rate your jams</a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      	<ul class="nav navbar-nav">
-					<li><a href="{{pathFor 'people'}}">People</a></li>
-					<li><a href="{{pathFor 'about'}}">About Us</a></li>
-					<li><a href="{{pathFor 'sponsors'}}">Sponsors</a></li>
-					<li><a href="{{pathFor 'iptable'}}">Local Servers</a></li>
+					<li><a href="{{pathFor 'about'}}">about</a></li>
+					<li><a href="{{pathFor 'artists'}}">artist pages</a></li>
+					<li><a href="{{pathFor 'albums'}}">albums</a></li>
 				</ul>
 			    <ul class="nav navbar-nav navbar-right">
 			            {{> loginButtons}} <!-- here -->
