--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -22,7 +22,7 @@
 		      	<ul class="nav navbar-nav">
 					<li><a href="{{pathFor 'rate'}}">Ratings</a></li>
 					<li><a href="{{pathFor 'chat'}}">Chat</a></li>
-					<li><a href="{{pathFor 'display'}}">Results</a></li>
+					<li><a href="{{pathFor 'display'}}">Messages</a></li>
 					<li><a href="{{pathFor 'learn'}}">Learn Japanese</a></li>
 					<li><a href="{{pathFor 'people'}}">Profiles</a></li>
 				</ul>
