--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -17,6 +17,7 @@
 		      		<ul class="nav navbar-nav">
 		      			<li><a href="{{pathFor 'welcome'}}">Welcome</a></li>
 		      			<li><a href="{{pathFor 'college'}}">Colleges</a></li>
+		      			<li><a href="{{pathFor 'mycollege'}}">My Colleges</a></li>
 						<li><a href="{{pathFor 'chat'}}">Comments</a></li>
 						<li><a href="{{pathFor 'about'}}">About Us</a></li>
 					</ul>
