--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -26,6 +26,8 @@
 					<li><a href="{{pathFor 'iptable'}}">Local Servers</a></li>
 					<li><a href="{{pathFor 'Chat'}}">Chat</a></li>
 					<li><a href="{{pathFor 'schedule'}}">Schedule</a></li>
+						<li><a href="{{pathFor 'dictation'}}">Dictate</a></li>
+					<li><a href="{{pathFor 'speech'}}">Speak</a></li>
 				</ul>
 			    <ul class="nav navbar-nav navbar-right">
 			            {{> loginButtons}} <!-- here -->
