some visual tweaks

--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		
 		<!-- Here is the standard Bootstrap code for a Navigation bar taken directly from getbootstrap.com/components -->
-		<nav class="navbar navbar-default">
+		<nav class="navbar navbar-inverse">
 		  <div class="container-fluid">
 		    <!-- Brand and toggle get grouped for better mobile display -->
 		    <div class="navbar-header">
