--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -1,12 +1,12 @@
 <template name="layout">
 	<div class="container">
-		
 		<!-- Here is the standard Bootstrap code for a Navigation bar taken directly from getbootstrap.com/components -->
 		<div class ="header clearfix">
 		<nav>
 			 <a class="navbar-brand" id="websiteName" href="{{pathFor 'welcome'}}">Parking Job</a>
 	          <ul class="nav nav-pills pull-center" >
 	          		<li><a href="{{pathFor 'people'}}">People</a></li>
+	          		<li><a href="{{pathFor 'about'}}">Possible Suspects</a></li>
 			  		<li><a href="{{pathFor 'incidents'}}">Incidents</a></li>
 			  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      		<ul class="nav navbar-nav">
