--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -25,6 +25,7 @@
 					<li><a href="{{pathFor 'sponsors'}}">Sponsors</a></li>
 					<li><a href="{{pathFor 'iptable'}}">Local Servers</a></li>
 					<li><a href="{{pathFor 'chat'}}">Chat</a></li>
+					<li><a href="{{pathFor 'firefly'}}">Firefly</a></li>
 				</ul>
 			    <ul class="nav navbar-nav navbar-right">
 			            {{> loginButtons}} <!-- here -->
