--- a/client/stylesheets/app.scss
+++ b/client/stylesheets/app.scss
@@ -1,4 +1,4 @@
-$positive: #DE4F4F;
+$positive: #000099; //#DE4F4F;
 $loading-font-size: 22px;
 
 @import '.meteor/local/build/programs/server/assets/packages/meteoric_ionic-sass/ionic';
