--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -14,24 +14,12 @@
 		        <span class="icon-bar"></span>
 		      </button>
 		      <a class="navbar-brand" href="{{pathFor 'welcome'}}">
-		      	Ziyu Qiu's PA01</a>
+		      	Ziyu Qiu's Home for Math 23b</a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		      	<ul class="nav navbar-nav">
-					<li><a href="{{pathFor 'people'}}">People</a></li>
-					<li><a href="{{pathFor 'about'}}">About Us</a></li>
-					<li><a href="{{pathFor 'sponsors'}}">Sponsors</a></li>
-					<li><a href="{{pathFor 'iptable'}}">Local Servers</a></li>
-					<li><a href="{{pathFor 'Chat'}}">Chat</a></li>
-					<li><a href="{{pathFor 'schedule'}}">Schedule</a></li>
-						<li><a href="{{pathFor 'dictation'}}">Dictate</a></li>
-					<li><a href="{{pathFor 'speech'}}">Speak</a></li>
-				</ul>
-			    <ul class="nav navbar-nav navbar-right">
-			            {{> loginButtons}} <!-- here -->
-			    </ul>				
+		      	
 		    </div><!-- /.navbar-collapse -->
 			
 		  </div><!-- /.container-fluid -->
